docs/en/4.1.0/api/printingepson.md
#PrintingEpson
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;11</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#menumerateSTATIC" data-target="cMethodenumerate" class="autouncollapse">enumerate</a></li><li><a href="#mgetDefaultSTATIC" data-target="cMethodgetDefault" class="autouncollapse">getDefault</a></li><li><a href="#msetDefaultSTATIC" data-target="cMethodsetDefault" class="autouncollapse">setDefault</a></li></li><li class="divider"></li><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Instance</i></b></a><li><a href="#mcalcSumm" data-target="cMethodcalcSumm" class="autouncollapse">calcSumm</a></li><li><a href="#mgetAllProperties" data-target="cMethodgetAllProperties" class="autouncollapse">getAllProperties</a></li><li><a href="#mgetPlatformName" data-target="cMethodgetPlatformName" class="autouncollapse">getPlatformName</a></li><li><a href="#mgetProperties" data-target="cMethodgetProperties" class="autouncollapse">getProperties</a></li><li><a href="#mgetProperty" data-target="cMethodgetProperty" class="autouncollapse">getProperty</a></li><li><a href="#mjoinStrings" data-target="cMethodjoinStrings" class="autouncollapse">joinStrings</a></li><li><a href="#msetProperties" data-target="cMethodsetProperties" class="autouncollapse">setProperties</a></li><li><a href="#msetProperty" data-target="cMethodsetProperty" class="autouncollapse">setProperty</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;1</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Instance Properties</i></b></a><li><a href="#psimpleStringProperty" data-target="cPropertysimpleStringProperty" class="autouncollapse">simpleStringProperty</a></li></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">Javascript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>Example extension api</p>

<h2>Enabling the API</h2>

<p>In order to use this API you must include the following extension in your <code>build.yml</code>.</p>

<pre><code>:::ruby
extensions: ["printing_epson"]
</code></pre>

<p>The <code>printing_epson</code> extension is also included automatically if you specify the following in your <code>build.yml</code>.</p>

<pre><code>:::ruby
app_type: "rhoelements"
</code></pre>

<p>NOTE: If you are building a Windows Mobile or Windows CE app with this API, you must set your app_type as &ldquo;rhoelements&rdquo; in your build.yml as shown <a href="../guide/build_config#other-build-time-settings">here</a>.</p>
<p>This is example of API. Implementation contain in extension.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mcalcSumm'/><div class=' method  js ruby' id='mcalcSumm'><h3><strong  >calcSumm</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> a, <span class="text-info">INTEGER</span> b)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcalcSumm1" data-toggle="tab">Description</a></li><li ><a href="#mcalcSumm2" data-toggle="tab">Parameters</a></li><li ><a href="#mcalcSumm4" data-toggle="tab">Return</a></li><li ><a href="#mcalcSumm6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-calcSumm'><div class="tab-pane fade active in" id="mcalcSumm1"><p>Return sum of two params: a+b.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="mcalcSumm2"><div><p><strong>Parameters</strong></p><ul><li>a : <span class='text-info'>INTEGER</span><p> </p></li><li>b : <span class='text-info'>INTEGER</span><p> </p></li></ul></div></div><div class="tab-pane fade" id="mcalcSumm3"></div><div class="tab-pane fade" id="mcalcSumm4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER</li></ul></div></div><div class="tab-pane fade" id="mcalcSumm6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.calcSumm(<span class="text-info">INTEGER</span> a, <span class="text-info">INTEGER</span> b)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.calcSumm(<span class="text-info">INTEGER</span> a, <span class="text-info">INTEGER</span> b)</code> </li><li>Ruby: <code>Rho::PrintingEpson.calcSumm(<span class="text-info">INTEGER</span> a, <span class="text-info">INTEGER</span> b)</code></li></ul></li></ul></div></div></div>  </div><a name ='menumerateSTATIC'/><div class=' method  js ruby' id='menumerateSTATIC'><h3><strong  >enumerate</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#menumerateSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#menumerateSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#menumerateSTATIC3" data-toggle="tab">Callback</a></li><li ><a href="#menumerateSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#menumerateSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-enumerateSTATIC'><div class="tab-pane fade active in" id="menumerateSTATIC1"><p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="menumerateSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>ARRAY</span></strong></p><ul><ul><li><i>Object<i> : <span class='text-info'>SELF_INSTANCE: Rho::PrintingEpson</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>ARRAY : <p>Array of PrintingEpson objects.</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li><i>Object<i> : <span class='text-info'>SELF_INSTANCE: Rho::PrintingEpson</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.PrintingEpson.enumerate(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::PrintingEpson.enumerate(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetAllProperties'/><div class=' method  js ruby' id='mgetAllProperties'><h3><strong  >getAllProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetAllProperties1" data-toggle="tab">Description</a></li><li ><a href="#mgetAllProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetAllProperties3" data-toggle="tab">Callback</a></li><li ><a href="#mgetAllProperties4" data-toggle="tab">Return</a></li><li ><a href="#mgetAllProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getAllProperties'><div class="tab-pane fade active in" id="mgetAllProperties1"><p>This method will return all of object/value pairs for the propertyNames of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="mgetAllProperties2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetAllProperties3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="mgetAllProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : <p>Map of all available properties</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mgetAllProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::PrintingEpson.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetDefaultSTATIC'/><div class=' method  js ruby' id='mgetDefaultSTATIC'><h3><strong  >getDefault</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetDefaultSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mgetDefaultSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mgetDefaultSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getDefaultSTATIC'><div class="tab-pane fade active in" id="mgetDefaultSTATIC1"><p>This method will return an object that represents the default instance of the API Class. For example Camera.getDefault will return a Camera object that represents the default camera.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="mgetDefaultSTATIC2"></div><div class="tab-pane fade" id="mgetDefaultSTATIC3"></div><div class="tab-pane fade" id="mgetDefaultSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>SELF_INSTANCE : <p>Default object of Module.</p>
</li></ul></div></div><div class="tab-pane fade" id="mgetDefaultSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.PrintingEpson.getDefault()</code> </li><li>Ruby: <code>Rho::PrintingEpson.getDefault()</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetPlatformName'/><div class=' method  js ruby' id='mgetPlatformName'><h3><strong  >getPlatformName</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetPlatformName1" data-toggle="tab">Description</a></li><li ><a href="#mgetPlatformName4" data-toggle="tab">Return</a></li><li ><a href="#mgetPlatformName6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getPlatformName'><div class="tab-pane fade active in" id="mgetPlatformName1"><p>Return string with platform.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="mgetPlatformName2"></div><div class="tab-pane fade" id="mgetPlatformName3"></div><div class="tab-pane fade" id="mgetPlatformName4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mgetPlatformName6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getPlatformName()</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.getPlatformName()</code> </li><li>Ruby: <code>Rho::PrintingEpson.getPlatformName()</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetProperties'/><div class=' method  js ruby' id='mgetProperties'><h3><strong  >getProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetProperties1" data-toggle="tab">Description</a></li><li ><a href="#mgetProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetProperties3" data-toggle="tab">Callback</a></li><li ><a href="#mgetProperties4" data-toggle="tab">Return</a></li><li ><a href="#mgetProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getProperties'><div class="tab-pane fade active in" id="mgetProperties1"><p>This method will return a set of object/value pairs for the list of the propertyName that is passed in. The propertyNames must be a valid property of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="mgetProperties2"><div><p><strong>Parameters</strong></p><ul><li>arrayofNames : <span class='text-info'>ARRAY</span><p><p>List of properties I want to know about</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetProperties3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="mgetProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : <p>Map of properties I want to know about</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mgetProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::PrintingEpson.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetProperty'/><div class=' method  js ruby' id='mgetProperty'><h3><strong  >getProperty</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetProperty1" data-toggle="tab">Description</a></li><li ><a href="#mgetProperty2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetProperty3" data-toggle="tab">Callback</a></li><li ><a href="#mgetProperty4" data-toggle="tab">Return</a></li><li ><a href="#mgetProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getProperty'><div class="tab-pane fade active in" id="mgetProperty1"><p>This method will return the value of the propertyName that is passed in. The propertyName must be a valid property of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="mgetProperty2"><div><p><strong>Parameters</strong></p><ul><li>propertyName : <span class='text-info'>STRING</span><p><p>The property to return info about.</p>
 </p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetProperty3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>STRING</span></strong></p><ul></ul></div></div><div class="tab-pane fade" id="mgetProperty4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : <p>The property to return info about.</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mgetProperty6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::PrintingEpson.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mjoinStrings'/><div class=' method  js ruby' id='mjoinStrings'><h3><strong  >joinStrings</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> a, <span class="text-info">STRING</span> b)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mjoinStrings1" data-toggle="tab">Description</a></li><li ><a href="#mjoinStrings2" data-toggle="tab">Parameters</a></li><li ><a href="#mjoinStrings4" data-toggle="tab">Return</a></li><li ><a href="#mjoinStrings6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-joinStrings'><div class="tab-pane fade active in" id="mjoinStrings1"><p>Return join of two strings: a+b.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="mjoinStrings2"><div><p><strong>Parameters</strong></p><ul><li>a : <span class='text-info'>STRING</span><p> </p></li><li>b : <span class='text-info'>STRING</span><p> </p></li></ul></div></div><div class="tab-pane fade" id="mjoinStrings3"></div><div class="tab-pane fade" id="mjoinStrings4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mjoinStrings6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.joinStrings(<span class="text-info">STRING</span> a, <span class="text-info">STRING</span> b)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.joinStrings(<span class="text-info">STRING</span> a, <span class="text-info">STRING</span> b)</code> </li><li>Ruby: <code>Rho::PrintingEpson.joinStrings(<span class="text-info">STRING</span> a, <span class="text-info">STRING</span> b)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetDefaultSTATIC'/><div class=' method  js ruby' id='msetDefaultSTATIC'><h3><strong  >setDefault</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">SELF_INSTANCE: Rho::PrintingEpson</span> defaultInstance)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetDefaultSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#msetDefaultSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#msetDefaultSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#msetDefaultSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setDefaultSTATIC'><div class="tab-pane fade active in" id="msetDefaultSTATIC1"><p>This method allows you to set the attributes of the default object instance by passing in an object of the same class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="msetDefaultSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>defaultInstance : <span class='text-info'>SELF_INSTANCE: Rho::PrintingEpson</span><p><p>An instance object that is of the same class.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetDefaultSTATIC3"></div><div class="tab-pane fade" id="msetDefaultSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetDefaultSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.PrintingEpson.setDefault(<span class="text-info">SELF_INSTANCE: Rho::PrintingEpson</span> defaultInstance)</code> </li><li>Ruby: <code>Rho::PrintingEpson.setDefault(<span class="text-info">SELF_INSTANCE: Rho::PrintingEpson</span> defaultInstance)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetProperties'/><div class=' method  js ruby' id='msetProperties'><h3><strong  >setProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetProperties1" data-toggle="tab">Description</a></li><li ><a href="#msetProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#msetProperties4" data-toggle="tab">Return</a></li><li ><a href="#msetProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setProperties'><div class="tab-pane fade active in" id="msetProperties1"><p>This method will set the values of a list of properties for the API class. The propertyName must be a valid property for the class and must also not be read only.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="msetProperties2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>Map of properties I want to set</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetProperties3"></div><div class="tab-pane fade" id="msetProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.setProperties(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.setProperties(<span class="text-info">HASH</span> propertyMap)</code> </li><li>Ruby: <code>Rho::PrintingEpson.setProperties(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetProperty'/><div class=' method  js ruby' id='msetProperty'><h3><strong  >setProperty</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetProperty1" data-toggle="tab">Description</a></li><li ><a href="#msetProperty2" data-toggle="tab">Parameters</a></li><li ><a href="#msetProperty4" data-toggle="tab">Return</a></li><li ><a href="#msetProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setProperty'><div class="tab-pane fade active in" id="msetProperty1"><p>This method will set the value of a property for the API class. The propertyName must be a valid property for the class and must also not be read only.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"></p></div></p></div><div class="tab-pane fade" id="msetProperty2"><div><p><strong>Parameters</strong></p><ul><li>propertyName : <span class='text-info'>STRING</span><p><p>The one property name that I want to set</p>
 </p></li><li>propertyValue : <span class='text-info'>STRING</span><p><p>The one property value that I want to set</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetProperty3"></div><div class="tab-pane fade" id="msetProperty4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetProperty6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code> </li><li>Ruby: <code>Rho::PrintingEpson.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='psimpleStringProperty'></a><div class=' method  js ruby' id='psimpleStringProperty'><h3><strong  >simpleStringProperty</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#psimpleStringProperty1" data-toggle="tab">Description</a></li><li ><a href="#psimpleStringProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-simpleStringProperty'><div class="tab-pane fade active in" id="psimpleStringProperty1"><p>Simple string property.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"> </p></div></p></div><div class="tab-pane fade" id="psimpleStringProperty2"></div><div class="tab-pane fade" id="psimpleStringProperty5"></div><div class="tab-pane fade" id="psimpleStringProperty6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.simpleStringProperty</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>Javascript: <code>Rho.PrintingEpson.simpleStringProperty</code> </li><li>Ruby: <code>Rho::PrintingEpson.simpleStringProperty</code></li></ul></li></ul></div></div></div>  </div></div>